# trader

./: .env.example  .gitignore  .log4brains.yml  CLAUDE.md  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/src/trader/: __init__.py  analysis.py  atr_indicators.py  fibonacci.py  harmonics.py  indicators.py  journal.py  main.py  pivots.py  position_sizing.py  signals.py  trend_lines.py  velocity.py  volume_indicators.py  workflow.py
backend/src/trader/backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  models.py  optimizer.py  signals_processor.py  trade_simulator.py
backend/src/trader/market_data/: __init__.py  cache.py  models.py  rate_limiter.py  service.py
backend/src/trader/persistence/: __init__.py  config.py  connection.py  models.py  service.py
backend/tests/integration/: test_api.py  test_workflow_integration.py
backend/tests/unit/: test_analysis.py  test_atr_indicators.py  test_fibonacci.py  test_harmonics.py  test_indicators.py  test_journal.py  test_pivots.py  test_position_sizing.py  test_sanity.py  test_signals.py  test_trend_lines.py  test_velocity.py  test_volume_indicators.py  test_workflow.py
backend/tests/unit/backtesting/: test_metrics.py  test_models.py
backend/tests/unit/market_data/: __init__.py  test_cache.py  test_models.py  test_providers.py  test_rate_limiter.py  test_service.py  test_yahoo_provider.py
backend/tests/unit/persistence/: test_config.py
docs/: README.md  (+3 more)
(+296 files in other folders)
